# remuXcode

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  biome.json  compose.yml  fix_subtitle_langs.py  pyproject.toml  pyrightconfig.json  remuxcode.py  remuxcode.service  requirements-lint.txt  requirements.txt  start.sh
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: docker-publish.yml  linters.yml
backend/: __init__.py  api_analyze.py  api_browse.py  api_config.py  api_convert.py  api_jobs.py  api_logs.py  api_retag.py  api_webhook.py  app.py  auth.py  config.yaml  core.py
backend/utils/: __init__.py  anime_detect.py  config.py  cpu_affinity.py  ffprobe.py  hwaccel.py  job_store.py  language.py  media_store.py
backend/workers/: __init__.py  _progress.py  _safe_move.py  audio.py  cleanup.py  retag.py  video.py
config/: config.yaml
docs/: dashboard.md  integrations.md  jobs.md  logs.md  movies.md  settings.md  shows.md  sonarr-webhook-reference.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  codecs.ts  format.ts  languages.ts  resolution.ts  stores.ts  types.ts
frontend/src/lib/components/: AnalyzeModal.svelte  ConvertOptionsModal.svelte  JobCard.svelte  LanguageSelect.svelte  Navbar.svelte  StatusBadge.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/config/: +page.svelte
frontend/src/routes/integrations/: +page.svelte
frontend/src/routes/jobs/: +page.svelte
frontend/src/routes/logs/: +page.svelte
frontend/src/routes/movies/: +page.svelte
frontend/src/routes/shows/: +page.svelte
tests/: __init__.py  test_subtitle_cleanup.py  test_workers.py
