[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remuxcode"
version = "2.1.0"
description = "remuXcode - Unified media transcoding for DTS audio, HEVC video, and stream cleanup"
authors = [
    {name = "remuXcode contributors"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video :: Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/sirjmann92/remuXcode"
Repository = "https://github.com/sirjmann92/remuXcode"
Issues = "https://github.com/sirjmann92/remuXcode/issues"

dependencies = [
    "fastapi",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "pre-commit",
    "ruff>=0.8.0",
    "types-PyYAML",
    "types-requests",
]

[tool.setuptools]
packages = ["backend", "backend.utils", "backend.workers"]

# ---------------------------------------------------------------------------
# Codespell
# ---------------------------------------------------------------------------
[tool.codespell]
skip = ".git,node_modules,frontend/build,*.svg,**/package-lock.json"
ignore-words-list = "tha,vie,wit,ans,sade,nd,wel,renderD"
quiet-level = 3

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "--quiet --timeout=20 --durations=10 -o console_output_style=progress"
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
platform = "linux"
strict_equality = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["deprecated", "ignore-without-code", "redundant-self", "truthy-iterable"]
disable_error_code = ["annotation-unchecked"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_unused_ignores = false

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
indent-width = 4
fix = true
force-exclude = true
target-version = "py313"
required-version = ">=0.8.0"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A001",
    "B002", "B005", "B007", "B014", "B015", "B017", "B018", "B023", "B026", "B032", "B904", "B905",
    "BLE",
    "COM818",
    "D",
    "DTZ003", "DTZ004",
    "E",
    "F", "F541",
    "FLY",
    "FURB",
    "G",
    "I",
    "INP",
    "ISC",
    "ICN001",
    "LOG",
    "N804", "N805", "N815",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF005", "RUF006", "RUF010", "RUF013", "RUF017", "RUF018", "RUF019",
    "S102", "S103", "S108", "S306", "S307", "S602", "S604", "S608", "S609",
    "SIM",
    "SLF",
    "SLOT",
    "T100", "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]

ignore = [
    "D202", "D203", "D213", "D401", "D406", "D407",
    "E501",
    "PLC0415",  # lazy-import pattern in app.py/auth.py is intentional
    "PLC1901",
    "PLR0904", "PLR0911", "PLR0912", "PLR0913", "PLR0914", "PLR0915", "PLR0916", "PLR0917", "PLR1702", "PLR2004",
    "PLW0603",  # global singleton pattern in core.py is architectural
    "PLW2901",
    "PT011", "PT018",
    "RUF001", "RUF002", "RUF003", "RUF015",
    "SIM102", "SIM103", "SIM108", "SIM115",
    "TC001", "TC002", "TC003",
    "TRY003", "TRY300", "TRY400",
    "W191", "E111", "E114", "E117",
    "D204", "D205", "D206", "D300", "D413",
    "Q", "COM812", "COM819", "ISC001",
    "PLE0605",
    "BLE001", "TRY301", "PLW0602", "TRY002",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "SLF001", "PLR2004", "S101", "PLR0913", "C901", "E501",
    "B017", "PT006", "S108", "D401", "D417", "T201",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
property-decorators = ["propcache.cached_property"]
